--- a/.config
+++ b/.config
@@ -1,7 +1,39 @@
-echo "CONFIG_PACKAGE_luci-app-passwall2=y" > .config
-echo "CONFIG_PACKAGE_golang=y" >> .config
-echo "CONFIG_PACKAGE_libcap=y" >> .config
-echo "CONFIG_PACKAGE_libcares=y" >> .config
-echo "CONFIG_PACKAGE_libuv=y" >> .config
-echo "CONFIG_PACKAGE_libopenssl=y" >> .config
-make defconfig
+########################################
+# LuCI 管理界面
+########################################
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-app-passwall2=y
+
+########################################
+# Lua 支持 (lucihttp 依赖)
+########################################
+CONFIG_PACKAGE_lua=y
+CONFIG_PACKAGE_liblua=y
+CONFIG_PACKAGE_liblua-dev=y
+CONFIG_PACKAGE_lucihttp=y
+
+########################################
+# PassWall2 常用代理依赖
+########################################
+CONFIG_PACKAGE_xray-core=y
+CONFIG_PACKAGE_v2ray-core=y
+CONFIG_PACKAGE_trojan=y
+CONFIG_PACKAGE_shadowsocks-libev=y
+CONFIG_PACKAGE_shadowsocksr-libev=y
+CONFIG_PACKAGE_hysteria=y
+CONFIG_PACKAGE_sing-box=y
+CONFIG_PACKAGE_naiveproxy=y
+CONFIG_PACKAGE_wireguard-tools=y
+CONFIG_PACKAGE_kmod-wireguard=y
+
+########################################
+# 其他依赖库
+########################################
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_libopenssl=y
+CONFIG_PACKAGE_libustream-openssl=y
+CONFIG_PACKAGE_ipset=y
+CONFIG_PACKAGE_dnsmasq-full=y
+CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_coreutils-base64=y
+CONFIG_PACKAGE_unzip=y
