--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -1,91 +1,39 @@
-name: 司络SL-3000 EMMC 固件编译 (最终版)
+name: 编译 PassWall2 软件包
 
 on:
   workflow_dispatch:
 
-env:
-  REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10
-  REPO_BRANCH: 2410
-  CONFIG_FILE: sl3000.config
-  TZ: Asia/Shanghai
-  CCACHE_DIR: /workdir/.ccache
-
 jobs:
   build:
     runs-on: ubuntu-22.04
-    timeout-minutes: 180
-
     steps:
     - name: 检查代码
       uses: actions/checkout@v4
 
-    - name: 初始化环境并清理磁盘
+    - name: 初始化环境
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential git wget curl unzip \
           gawk flex gettext libssl-dev python3 rsync ccache cmake ninja-build
-        # 删除不必要的大文件和工具链
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc \
-                    /opt/hostedtoolcache /usr/lib/jvm /usr/lib/google-cloud-sdk /usr/lib/heroku
-        sudo docker image prune -a --force || true
-        sudo docker builder prune --all --force || true
-        sudo apt-get autoremove --purge -y
-        sudo apt-get clean
-        sudo mkdir -p /workdir
-        sudo chown $USER:$GROUPS /workdir
-        df -hT
 
     - name: 克隆源码
-      working-directory: /workdir
       run: |
-        git clone --depth=1 $REPO_URL -b $REPO_BRANCH openwrt
-        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+        git clone --depth=1 https://github.com/padavanonly/immortalwrt-mt798x-24.10 -b 2410 openwrt
 
-    - name: 应用配置
-      run: |
-        cp $CONFIG_FILE openwrt/.config
-
-    - name: 更新和安装 feeds (只安装必要包)
+    - name: 安装 PassWall2
       run: |
         cd openwrt
         ./scripts/feeds update -a
-        ./scripts/feeds install -a -p luci -p packages
+        ./scripts/feeds install -a
+        git clone https://github.com/xiaorouji/openwrt-passwall2 package/passwall2
 
-    - name: 下载依赖并清理
+    - name: 编译 PassWall2
       run: |
         cd openwrt
-        make defconfig
-        make download -j$(nproc) || make download -j1
-        # 删除无效或过大的下载文件
-        find dl -size -1024c -delete
-        find dl -size +100M -delete
-        df -hT
+        make package/luci-app-passwall2/compile V=s
 
-    - name: 编译固件 (只编译 config)
-      run: |
-        cd openwrt
-        ccache -o max_size=1G
-        make -j$(nproc) || make -j1 V=s
-        df -hT
-
-    - name: 整理固件
-      run: |
-        cd openwrt/bin/targets/*/*
-        rm -rf packages *.buildinfo *.json *.manifest
-        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        df -hT
-
-    - name: 上传固件
+    - name: 上传 ipk 包
       uses: actions/upload-artifact@v4
       with:
-        name: SL3000_firmware
-        path: ${{ env.FIRMWARE }}/*
-        retention-days: 7
-
-    - name: 编译失败通知
-      if: failure()
-      run: |
-        echo "❌ 固件编译失败！"
-        echo "请检查编译日志获取详细信息"
-        echo "当前磁盘使用情况："
-        df -hT
+        name: passwall2_ipk
+        path: openwrt/bin/packages/*/luci/luci-app-passwall2*.ipk
