--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -1,4 +1,4 @@
-name: 编译 PassWall2 软件包
+name: 编译 PassWall2 套件 (含依赖)
 
 on:
   workflow_dispatch:
@@ -6,6 +6,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    timeout-minutes: 120
+
     steps:
     - name: 检查代码
       uses: actions/checkout@v4
@@ -15,25 +17,47 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential git wget curl unzip \
           gawk flex gettext libssl-dev python3 rsync ccache cmake ninja-build
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc \
+                    /opt/hostedtoolcache /usr/lib/jvm /usr/lib/google-cloud-sdk /usr/lib/heroku
+        df -hT
 
     - name: 克隆源码
       run: |
         git clone --depth=1 https://github.com/padavanonly/immortalwrt-mt798x-24.10 -b 2410 openwrt
 
-    - name: 安装 PassWall2
+    - name: 安装 PassWall2 源码
       run: |
         cd openwrt
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         git clone https://github.com/xiaorouji/openwrt-passwall2 package/passwall2
 
-    - name: 编译 PassWall2
+    - name: 编译 PassWall2 及依赖
       run: |
         cd openwrt
+        make defconfig
         make package/luci-app-passwall2/compile V=s
+        make package/xray-core/compile V=s
+        make package/trojan/compile V=s
+        make package/shadowsocks-libev/compile V=s
+        make package/shadowsocksr-libev/compile V=s
+        make package/hysteria/compile V=s
+        make package/sing-box/compile V=s
+        make package/naiveproxy/compile V=s
+        make package/wireguard-tools/compile V=s
 
     - name: 上传 ipk 包
       uses: actions/upload-artifact@v4
       with:
-        name: passwall2_ipk
-        path: openwrt/bin/packages/*/luci/luci-app-passwall2*.ipk
+        name: passwall2_suite_ipk
+        path: |
+          openwrt/bin/packages/*/luci/luci-app-passwall2*.ipk
+          openwrt/bin/packages/*/packages/xray-core*.ipk
+          openwrt/bin/packages/*/packages/trojan*.ipk
+          openwrt/bin/packages/*/packages/shadowsocks-libev*.ipk
+          openwrt/bin/packages/*/packages/shadowsocksr-libev*.ipk
+          openwrt/bin/packages/*/packages/hysteria*.ipk
+          openwrt/bin/packages/*/packages/sing-box*.ipk
+          openwrt/bin/packages/*/packages/naiveproxy*.ipk
+          openwrt/bin/packages/*/packages/wireguard-tools*.ipk
+        retention-days: 7
