--- a/.config
+++ b/.config
@@ -1,39 +1,39 @@
-########################################
-# LuCI 管理界面
-########################################
+# 目标平台
+CONFIG_TARGET_mediatek=y
+CONFIG_TARGET_mediatek_filogic=y
+CONFIG_TARGET_mediatek_filogic_DEVICE_sl3000=y
+
+# LuCI Web 界面
 CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_luci-mod-admin-full=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-uhttpd=y
+
+# 无线驱动与工具
+CONFIG_PACKAGE_kmod-mt7981-firmware=y
+CONFIG_PACKAGE_kmod-mt7981-wo-firmware=y
+CONFIG_PACKAGE_kmod-mt7981=y
+CONFIG_PACKAGE_kmod-mt76-core=y
+CONFIG_PACKAGE_kmod-mt76-connac=y
+CONFIG_PACKAGE_kmod-mt76=y
+CONFIG_PACKAGE_kmod-cfg80211=y
+CONFIG_PACKAGE_kmod-mac80211=y
+CONFIG_PACKAGE_wireless-tools=y
+CONFIG_PACKAGE_wpad-basic-mbedtls=y
+
+# 网络管理
+CONFIG_PACKAGE_iptables=y
+CONFIG_PACKAGE_dnsmasq=y
+CONFIG_PACKAGE_uhttpd=y
+CONFIG_PACKAGE_opkg=y
+
+# PassWall2 套件（可选）
 CONFIG_PACKAGE_luci-app-passwall2=y
-
-########################################
-# Lua 支持 (lucihttp 依赖)
-########################################
-CONFIG_PACKAGE_lua=y
-CONFIG_PACKAGE_liblua=y
-CONFIG_PACKAGE_liblua-dev=y
-CONFIG_PACKAGE_lucihttp=y
-
-########################################
-# PassWall2 常用代理依赖
-########################################
 CONFIG_PACKAGE_xray-core=y
-CONFIG_PACKAGE_v2ray-core=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_shadowsocks-libev=y
-CONFIG_PACKAGE_shadowsocksr-libev=y
+CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_hysteria=y
 CONFIG_PACKAGE_sing-box=y
-CONFIG_PACKAGE_naiveproxy=y
-CONFIG_PACKAGE_wireguard-tools=y
-CONFIG_PACKAGE_kmod-wireguard=y
-
-########################################
-# 其他依赖库
-########################################
-CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_libopenssl=y
-CONFIG_PACKAGE_libustream-openssl=y
-CONFIG_PACKAGE_ipset=y
-CONFIG_PACKAGE_dnsmasq-full=y
-CONFIG_PACKAGE_coreutils=y
-CONFIG_PACKAGE_coreutils-base64=y
-CONFIG_PACKAGE_unzip=y
