--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -1,84 +1,41 @@
-name: SL-3000 固件与 PassWall2 套件编译
+name: Build PassWall2 Packages for SL-3000
 
 on:
   workflow_dispatch:
 
-env:
-  REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10
-  REPO_BRANCH: 2410
-  TZ: Asia/Shanghai
-
 jobs:
   build:
     runs-on: ubuntu-22.04
-    timeout-minutes: 180
 
     steps:
-    - name: 检查代码
-      uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v3
 
-    - name: 初始化环境
+    - name: Install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential git wget curl unzip \
-          gawk flex gettext libssl-dev python3 rsync ccache cmake ninja-build
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc \
-                    /opt/hostedtoolcache /usr/lib/jvm /usr/lib/google-cloud-sdk /usr/lib/heroku
-        df -hT
+          libncurses5-dev libncursesw5-dev zlib1g-dev gawk flex gettext \
+          libssl-dev python3 python3-distutils rsync
 
-    - name: 克隆源码
+    - name: Clone OpenWrt SDK (filogic, aarch64_cortex-a53)
       run: |
-        git clone --depth=1 $REPO_URL -b $REPO_BRANCH openwrt
+        wget https://downloads.openwrt.org/releases/23.05.3/targets/mediatek/filogic/openwrt-sdk-23.05.3-mediatek-filogic_gcc-12.3.0_musl.Linux-x86_64.tar.xz
+        tar -xf openwrt-sdk-*.tar.xz
+        mv openwrt-sdk-* openwrt
 
-    - name: 配置目标为 SL-3000
+    - name: Fetch PassWall2 source
       run: |
-        cat > openwrt/.config <<'EOF'
-        CONFIG_TARGET_mediatek=y
-        CONFIG_TARGET_mediatek_filogic=y
-        CONFIG_TARGET_mediatek_filogic_DEVICE_sl3000=y
-        CONFIG_PACKAGE_luci-app-passwall2=y
-        CONFIG_PACKAGE_xray-core=y
-        CONFIG_PACKAGE_trojan=y
-        CONFIG_PACKAGE_shadowsocks-libev=y
-        CONFIG_PACKAGE_shadowsocksr-libev=y
-        CONFIG_PACKAGE_hysteria=y
-        CONFIG_PACKAGE_sing-box=y
-        CONFIG_PACKAGE_naiveproxy=y
-        CONFIG_PACKAGE_wireguard-tools=y
-        CONFIG_PACKAGE_kmod-wireguard=y
-        EOF
+        cd openwrt/package
+        git clone https://github.com/xiaorouji/openwrt-passwall2 passwall2
 
-    - name: 更新 feeds 并安装 PassWall2
+    - name: Build PassWall2
       run: |
         cd openwrt
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a
-        git clone https://github.com/xiaorouji/openwrt-passwall2 package/passwall2
+        make package/passwall2/compile V=s
 
-    - name: 生成配置并安装工具链
-      run: |
-        cd openwrt
-        make defconfig
-        make toolchain/install V=s
-
-    - name: 编译固件与 PassWall2 套件
-      run: |
-        cd openwrt
-        make -j$(nproc) || make -j1 V=s
-
-    - name: 整理固件与 ipk
-      run: |
-        echo "FIRMWARE_DIR=$(find openwrt/bin/targets/mediatek/filogic -type d)" >> $GITHUB_ENV
-        echo "PKG_DIR=openwrt/bin/packages/aarch64_cortex-a53" >> $GITHUB_ENV
-
-    - name: 上传固件
-      uses: actions/upload-artifact@v4
+    - name: Upload packages
+      uses: actions/upload-artifact@v3
       with:
-        name: SL3000_firmware
-        path: ${{ env.FIRMWARE_DIR }}/*
-
-    - name: 上传 PassWall2 套件
-      uses: actions/upload-artifact@v4
-      with:
-        name: PassWall2_suite_ipk
-        path: ${{ env.PKG_DIR }}/*/*.ipk
+        name: passwall2-packages
+        path: openwrt/bin/packages/aarch64_cortex-a53/
