--- a/.github/workflows/passwall2.yml
+++ b/.github/workflows/passwall2.yml
@@ -1,4 +1,4 @@
-name: Build PassWall2 Packages for SL-3000
+name: Build OpenWrt for SL-3000 with WiFi + PassWall2
 
 on:
   workflow_dispatch:
@@ -18,24 +18,67 @@ jobs:
           libncurses5-dev libncursesw5-dev zlib1g-dev gawk flex gettext \
           libssl-dev python3 python3-distutils rsync
 
-    - name: Clone OpenWrt SDK (filogic, aarch64_cortex-a53)
+    - name: Clone OpenWrt source (stable branch)
       run: |
-        wget https://downloads.openwrt.org/releases/23.05.3/targets/mediatek/filogic/openwrt-sdk-23.05.3-mediatek-filogic_gcc-12.3.0_musl.Linux-x86_64.tar.xz
-        tar -xf openwrt-sdk-*.tar.xz
-        mv openwrt-sdk-* openwrt
+        git clone https://github.com/padavanonly/immortalwrt-mt798x-24.10 -b 2410 openwrt
 
-    - name: Fetch PassWall2 source
-      run: |
-        cd openwrt/package
-        git clone https://github.com/xiaorouji/openwrt-passwall2 passwall2
-
-    - name: Build PassWall2
+    - name: Update feeds
       run: |
         cd openwrt
-        make package/passwall2/compile V=s
+        ./scripts/feeds update -a
+        ./scripts/feeds install -a
+
+    - name: Generate .config
+      run: |
+        cd openwrt
+        cat > .config <<'EOF'
+        CONFIG_TARGET_mediatek=y
+        CONFIG_TARGET_mediatek_filogic=y
+        CONFIG_TARGET_mediatek_filogic_DEVICE_sl3000=y
+
+        # Wi-Fi 驱动与工具
+        CONFIG_PACKAGE_kmod-mt76=y
+        CONFIG_PACKAGE_kmod-mt76-core=y
+        CONFIG_PACKAGE_kmod-mt76-connac=y
+        CONFIG_PACKAGE_kmod-mac80211=y
+        CONFIG_PACKAGE_kmod-cfg80211=y
+        CONFIG_PACKAGE_wireless-tools=y
+        CONFIG_PACKAGE_wpad-basic-mbedtls=y
+
+        # LuCI 界面
+        CONFIG_PACKAGE_luci=y
+        CONFIG_PACKAGE_luci-app-firewall=y
+        CONFIG_PACKAGE_luci-app-uhttpd=y
+
+        # PassWall2 套件
+        CONFIG_PACKAGE_luci-app-passwall2=y
+        CONFIG_PACKAGE_xray-core=y
+        CONFIG_PACKAGE_trojan=y
+        CONFIG_PACKAGE_shadowsocks-libev=y
+        CONFIG_PACKAGE_naiveproxy=y
+        CONFIG_PACKAGE_hysteria=y
+        CONFIG_PACKAGE_sing-box=y
+        EOF
+
+    - name: Build toolchain
+      run: |
+        cd openwrt
+        make defconfig
+        make toolchain/install V=s
+
+    - name: Build firmware
+      run: |
+        cd openwrt
+        make -j$(nproc) V=s
+
+    - name: Upload firmware
+      uses: actions/upload-artifact@v4
+      with:
+        name: sl3000-firmware
+        path: openwrt/bin/targets/mediatek/filogic/
 
     - name: Upload packages
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: passwall2-packages
+        name: sl3000-packages
         path: openwrt/bin/packages/aarch64_cortex-a53/
