--- a/.config
+++ b/.config
@@ -1,39 +1,66 @@
-# 目标平台
+# ===== Target System =====
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_filogic=y
-CONFIG_TARGET_mediatek_filogic_DEVICE_sl3000=y
+CONFIG_TARGET_MEDIATEK_FILOGIC_DEVICE_sl3000=y   # 需社区 DTS 支持
 
-# LuCI Web 界面
+# ===== 基础系统 =====
+CONFIG_PACKAGE_opkg=y
+CONFIG_PACKAGE_busybox=y
+CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_ca-bundle=y
+CONFIG_PACKAGE_ca-certificates=y
+
+# ===== LuCI Web 界面 =====
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+CONFIG_PACKAGE_luci-proto-ppp=y
+CONFIG_PACKAGE_luci-proto-ipv6=y
 
-# 无线驱动与工具
-CONFIG_PACKAGE_kmod-mt7981-firmware=y
-CONFIG_PACKAGE_kmod-mt7981-wo-firmware=y
-CONFIG_PACKAGE_kmod-mt7981=y
-CONFIG_PACKAGE_kmod-mt76-core=y
-CONFIG_PACKAGE_kmod-mt76-connac=y
+# ===== 网络功能 =====
+CONFIG_PACKAGE_dnsmasq-full=y
+CONFIG_PACKAGE_firewall4=y
+CONFIG_PACKAGE_ppp=y
+CONFIG_PACKAGE_pppoe=y
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_odhcp6c=y
+
+# ===== Wi-Fi 驱动 =====
 CONFIG_PACKAGE_kmod-mt76=y
+CONFIG_PACKAGE_kmod-mt76-connac=y
+CONFIG_PACKAGE_kmod-mt7915e=y
+CONFIG_PACKAGE_kmod-mt7981-wmac=y
 CONFIG_PACKAGE_kmod-cfg80211=y
 CONFIG_PACKAGE_kmod-mac80211=y
-CONFIG_PACKAGE_wireless-tools=y
-CONFIG_PACKAGE_wpad-basic-mbedtls=y
+CONFIG_PACKAGE_wireless-regdb=y
+CONFIG_PACKAGE_iw=y
+CONFIG_PACKAGE_iwinfo=y
+CONFIG_PACKAGE_wpad-wolfssl=y
 
-# 网络管理
-CONFIG_PACKAGE_iptables=y
-CONFIG_PACKAGE_dnsmasq=y
-CONFIG_PACKAGE_uhttpd=y
-CONFIG_PACKAGE_opkg=y
+# ===== 工具与诊断 =====
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_vim=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 
-# PassWall2 套件（可选）
-CONFIG_PACKAGE_luci-app-passwall2=y
-CONFIG_PACKAGE_xray-core=y
-CONFIG_PACKAGE_trojan=y
-CONFIG_PACKAGE_shadowsocks-libev=y
-CONFIG_PACKAGE_naiveproxy=y
-CONFIG_PACKAGE_hysteria=y
-CONFIG_PACKAGE_sing-box=y
+# ===== 存储支持（仅保留 eMMC）=====
+CONFIG_PACKAGE_block-mount=y
+CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-vfat=y
+CONFIG_PACKAGE_mount-utils=y
+
+# ===== 压缩与安全 =====
+CONFIG_PACKAGE_zlib=y
+CONFIG_PACKAGE_libopenssl=y
+CONFIG_PACKAGE_libwolfssl=y
+CONFIG_PACKAGE_mbedtls=y
+
+# ===== 优化选项 =====
+CONFIG_CCACHE=y
+CONFIG_BUILD_PATENTED=n
