--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,22 @@ jobs:
         git clone https://github.com/openwrt/openwrt.git
         cd openwrt
         git checkout v24.10.4
+        # 去掉 telephony feed，避免报错
+        sed -i '/telephony/d' feeds.conf.default
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
     - name: Copy custom config
       run: |
         cp .config openwrt/.config
+
+    - name: Cache downloads
+      uses: actions/cache@v4
+      with:
+        path: openwrt/dl
+        key: ${{ runner.os }}-openwrt-dl-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-openwrt-dl-
 
     - name: Build
       run: |
