--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,7 @@
 name: Build OpenWrt SL-3000
 
 on:
-  workflow_dispatch:   # 手动触发
-  push:
-    branches:
-      - main
+  workflow_dispatch:   # 仅手动触发，不会自动运行
 
 jobs:
   build:
