--- a/.config
+++ b/.config
@@ -1,14 +1,12 @@
 # ===== Target System =====
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_filogic=y
-CONFIG_TARGET_MEDIATEK_FILOGIC_DEVICE_sl3000=y   # 需社区 DTS 支持
+CONFIG_TARGET_MEDIATEK_FILOGIC_DEVICE_sl3000=y
 
 # ===== 基础系统 =====
 CONFIG_PACKAGE_opkg=y
 CONFIG_PACKAGE_busybox=y
 CONFIG_PACKAGE_coreutils=y
-CONFIG_PACKAGE_ca-bundle=y
-CONFIG_PACKAGE_ca-certificates=y
 
 # ===== LuCI Web 界面 =====
 CONFIG_PACKAGE_luci=y
@@ -18,6 +16,11 @@ CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
+
+# ===== 在线升级功能 =====
+CONFIG_PACKAGE_luci-app-attendedsysupgrade=y
+CONFIG_PACKAGE_attendedsysupgrade-common=y
+CONFIG_PACKAGE_auc=y
 
 # ===== 网络功能 =====
 CONFIG_PACKAGE_dnsmasq-full=y
@@ -39,27 +42,9 @@ CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_iwinfo=y
 CONFIG_PACKAGE_wpad-wolfssl=y
 
-# ===== 工具与诊断 =====
-CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_vim=y
-CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_wget=y
-CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-
 # ===== 存储支持（仅保留 eMMC）=====
 CONFIG_PACKAGE_block-mount=y
-CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
-CONFIG_PACKAGE_kmod-fs-vfat=y
-CONFIG_PACKAGE_mount-utils=y
-
-# ===== 压缩与安全 =====
-CONFIG_PACKAGE_zlib=y
-CONFIG_PACKAGE_libopenssl=y
-CONFIG_PACKAGE_libwolfssl=y
-CONFIG_PACKAGE_mbedtls=y
 
 # ===== 优化选项 =====
 CONFIG_CCACHE=y
