--- a/.config
+++ b/.config
@@ -1,51 +1,76 @@
-# ===== Target System =====
+########################################
+# Target 设置 (MT7981 / SL-3000)
+########################################
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_filogic=y
-CONFIG_TARGET_MEDIATEK_FILOGIC_DEVICE_sl3000=y
+CONFIG_TARGET_mediatek_filogic_DEVICE_sl3000=y
 
-# ===== 基础系统 =====
-CONFIG_PACKAGE_opkg=y
-CONFIG_PACKAGE_busybox=y
-CONFIG_PACKAGE_coreutils=y
+########################################
+# 选择最新稳定版内核 (Linux 6.6 LTS)
+########################################
+CONFIG_LINUX_6_6=y
+# CONFIG_LINUX_5_4 is not set
 
-# ===== LuCI Web 界面 =====
+########################################
+# Docker 核心组件
+########################################
+CONFIG_PACKAGE_docker=y
+CONFIG_PACKAGE_dockerd=y
+CONFIG_PACKAGE_docker-compose=y
+CONFIG_PACKAGE_containerd=y
+CONFIG_PACKAGE_runc=y
+CONFIG_PACKAGE_tini=y
+CONFIG_PACKAGE_libnetwork=y
+CONFIG_PACKAGE_libseccomp=y
+CONFIG_PACKAGE_cgroupfs-mount=y
+
+########################################
+# 文件系统支持 (Docker 存储驱动)
+########################################
+CONFIG_PACKAGE_kmod-fs-overlay=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-xfs=y
+CONFIG_PACKAGE_block-mount=y
+
+########################################
+# LuCI 管理界面
+########################################
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
-CONFIG_PACKAGE_luci-proto-ppp=y
-CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-docker=y
 
-# ===== 在线升级功能 =====
+########################################
+# 在线升级功能 (Attended Sysupgrade)
+########################################
 CONFIG_PACKAGE_luci-app-attendedsysupgrade=y
 CONFIG_PACKAGE_attendedsysupgrade-common=y
 CONFIG_PACKAGE_auc=y
 
-# ===== 网络功能 =====
-CONFIG_PACKAGE_dnsmasq-full=y
-CONFIG_PACKAGE_firewall4=y
-CONFIG_PACKAGE_ppp=y
-CONFIG_PACKAGE_pppoe=y
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_odhcp6c=y
-
-# ===== Wi-Fi 驱动 =====
+########################################
+# Wi-Fi 驱动与固件 (MT7981 + MT7915)
+########################################
 CONFIG_PACKAGE_kmod-mt76=y
-CONFIG_PACKAGE_kmod-mt76-connac=y
-CONFIG_PACKAGE_kmod-mt7915e=y
-CONFIG_PACKAGE_kmod-mt7981-wmac=y
+CONFIG_PACKAGE_kmod-mt7915-firmware=y
+CONFIG_PACKAGE_kmod-mt7981-firmware=y
 CONFIG_PACKAGE_kmod-cfg80211=y
 CONFIG_PACKAGE_kmod-mac80211=y
 CONFIG_PACKAGE_wireless-regdb=y
+
+########################################
+# Wi-Fi 工具与管理
+########################################
 CONFIG_PACKAGE_iw=y
-CONFIG_PACKAGE_iwinfo=y
-CONFIG_PACKAGE_wpad-wolfssl=y
+CONFIG_PACKAGE_wireless-tools=y
+CONFIG_PACKAGE_wpad-wolfssl=y   # 支持 WPA3
+CONFIG_PACKAGE_luci-app-wireless=y
 
-# ===== 存储支持（仅保留 eMMC）=====
-CONFIG_PACKAGE_block-mount=y
-CONFIG_PACKAGE_kmod-fs-ext4=y
-
-# ===== 优化选项 =====
-CONFIG_CCACHE=y
-CONFIG_BUILD_PATENTED=n
+########################################
+# Lua 依赖 (LuCI 必需)
+########################################
+CONFIG_PACKAGE_lua=y
+CONFIG_PACKAGE_liblua=y
